# barnacle

./: .dockerignore  Dockerfile  README.md  justfile  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  design_proposal.yml
.github/ISSUE_TEMPLATE/workflows/: dockerimage.yml
docs/mvp/: contracts.md
scripts/: ocr_resume_status.py
src/barnacle/: cli.py
